--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
 
       loadSidebar: true,
       subMaxLevel: 2,
+
       search: {
       maxAge: 86400000, // 过期时间，单位毫秒，默认一天
-      paths: [], // or 'auto'
+      //paths:auto, // or 'auto'
       placeholder: '在这里搜索',
       noData:'没有结果了',
       depth: 2,
       },
       
+      auto2top: true,
 
       'flexible-alerts': {
       note: {
