--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 
       'flexible-alerts': {
       note: {
-        label: "Hinweis"
+        label: "注意"
       },
       tip: {
         label: "提示"
       },
       warning: {
-        label: "Warnung"
+        label: "警告"
       },
       attention: {
-        label: "Achtung"
+        label: "危险"
       }
       }
       
