--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       name: '新烨数码产品资料',
       //repo: '/',
       coverpage: true,
-      loadNavbar: true,
+      loadNavbar: false,
 
       /*
       alias: {
@@ -62,5 +62,8 @@
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>  <!-- 警告插件-->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script> <!--emoji-->
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.js"></script> <!--代码高亮-->
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-c.min.js"></script> <!--代码高亮-->
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-cpp.min.js"></script> <!--代码高亮-->
 </body>
 </html>
